# BiosignalProcessor

./: .gitignore  CMakeLists.txt  README  build.sh  clean.sh  cmakeOnly.sh  gccfilter_wrap  license.txt  readLog.sh  run.sh  test.sh
Debug/: Makefile  cmake_install.cmake
Debug/include/: Makefile  cmake_install.cmake
Debug/src/: Makefile  cmake_install.cmake
Pedantic/: Makefile  cmake_install.cmake
Pedantic/include/: Makefile  cmake_install.cmake
Pedantic/src/: Makefile  OutputObjectName  cmake_install.cmake
Release/: Makefile  cmake_install.cmake
Release/include/: Makefile  cmake_install.cmake
Release/src/: Makefile  OutputObjectName  cmake_install.cmake
include/: CMakeLists.txt  config.h  config.h.in
modules/: FindLibSndFile.cmake
src/: BiosignalProcessor.c  CMakeLists.txt  source.c
